# aoc

./: .gitignore  AOC2024.Rmd  util.cr
05/: 5.cr  Makefile
10/: 10.cr
11/: 11.cr
12/: 12.cr
14/: 14.cr
15/: 15.cr
17/: 17.cr  astar.cr
18/: 18.cr
19/: 19.cr
2/: 2.js
21/: 21.cr
23/: 23.py  util.cr
23/01/: 1.js
23/03/: 3.js
23/04/: 4.js
23/05/: 5.cr
23/06/: 6.cr
23/08/: 8.cr
23/12/: 12.cr
23/13/: 13.cr
23/14/: 14.cr
23/16/: 16.cr
23/17/: shard.yml
23/18/: 18.cr
23/20/: 20.cr
23/21/: 21.cr
23/22/: 22.cr
23/24/: 24.cr
24/: 24.cr  AOC2024.Rmd  AOC2024.html
25/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07-1pass.rs  07.rs  08.rs  09.rs  25.py  Cargo.toml
4/: 4.js
5/: 5.cr
7/: 7.cr
8/: 8.cr
9/: 9.cr
