[package]
name = "AOC"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "01"
path = "01.rs"

[[bin]]
name = "02"
path = "02.rs"

[[bin]]
name = "03"
path = "03.rs"

[[bin]]
name = "04"
path = "04.rs"

[[bin]]
name = "05"
path = "05.rs"

[[bin]]
name = "06"
path = "06.rs"

[[bin]]
name = "07"
path = "07.rs"

[[bin]]
name = "08"
path = "08.rs"

[[bin]]
name = "09"
path = "09.rs"

[dependencies]
petgraph = "0.8.3"
itertools = "0.14.0"
regex = "1.12.2"
